# TFG-Fixation-Disparity-Curves

./: .gitignore  PRODUCT.md  README.md  Requirements.docx  render.yaml
.claude/: settings.local.json
backend/: pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/services/: fdc_fit.py
backend/tests/: conftest.py  test_fdc_fit.py  test_main.py
docs/: README.md  TFG_Documentation.tex  fdc-technical-documentation.md  model-and-errors.md  presentationPreparationFDC.md
frontend/: .env.production  .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
frontend/public/: .htaccess
frontend/src/: App.css  App.test.tsx  App.tsx  index.css
frontend/src/api/: fdc.test.ts  fdc.ts
frontend/src/components/: AdvancedMetricsSection.tsx  ClassificationCard.test.tsx  ClassificationCard.tsx  ClinicalReportChart.tsx  CurveChart.tsx  ExportMenu.tsx  HoverReadoutPanel.tsx  InputPanel.tsx  MetricsTable.test.tsx  MetricsTable.tsx  PageFooter.test.tsx  PageFooter.tsx  PageHeader.test.tsx  PageHeader.tsx  PdfExportDialog.tsx
frontend/src/constants/: fdc.test.ts  fdc.ts
frontend/src/hooks/: useClickOutside.ts
frontend/src/lib/: chart.test.ts  chart.ts  chartAnnotations.test.ts  chartAnnotations.ts  chartHover.test.ts  chartHover.ts  classification.test.ts  classification.ts  clinicalSummary.test.ts  clinicalSummary.ts  exportChart.ts  input.test.ts  input.ts  pdfReport.ts
frontend/src/test/: setup.ts
frontend/src/types/: fdc.ts
