[project]
name = "fdc-backend"
version = "0.1.0"
description = "Fixation Disparity Curve fitting API (FastAPI + GEKKO)"
requires-python = ">=3.11"

# Runtime and test dependencies are pinned in requirements.txt and
# requirements-dev.txt. This file holds project metadata and tool configuration
# (Ruff). The pytest configuration lives in pytest.ini.

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["**/__pycache__"]

[tool.ruff.lint]
# E/W  pycodestyle, F  pyflakes, I  isort, B  flake8-bugbear,
# UP   pyupgrade, SIM  flake8-simplify
select = ["E", "W", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Tests use leading-underscore private helpers and long descriptive assertions.
"tests/*" = ["E501"]
